Initial commit of infrastructure.data project, Update MVC for new UniversityDbContext

--- a/CleanArch/CleanArch.Mvc2/appsettings.json
+++ b/CleanArch/CleanArch.Mvc2/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=acer\\sqlexpress;Database=CleanArchDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=acer\\sqlexpress;Database=CleanArchDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDBConnection": "Server=acer\\sqlexpress;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
