--- a/CleanArch/CleanArch.Mvc2/CleanArch.Mvc2.csproj
+++ b/CleanArch/CleanArch.Mvc2/CleanArch.Mvc2.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
