Update CourseController e Swagger

--- a/CleanArch/CleanArch.Api/appsettings.json
+++ b/CleanArch/CleanArch.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=acer\\sqlexpress;Database=CleanArchDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDBConnection": "Server=acer\\sqlexpress;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
