--- a/CleanArch/CleanArch.Mvc2/CleanArch.Mvc2.csproj
+++ b/CleanArch/CleanArch.Mvc2/CleanArch.Mvc2.csproj
@@ -8,6 +8,8 @@
 
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
